renamed 4 section and add normalizator

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,7 +18,7 @@
 
 @import url('./catalog.css');
 
-@import url('./section-4.css');
+@import url('./advertisement.css');
 
 @import url('./sale.css');
 
