--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,3 +1,51 @@
-<section>
-    About us
+<section class="about-us">
+  <div class="container">
+    <div class="desktop-section">
+      <div class="text-back">
+        <h2 class="about-us-name">About-us</h2>
+        <div class="about-us-text-type">
+          <p class="about-us-text">
+            Welcome to our premium watch collection, where luxury and style meet
+            functionality and precision. Our selection of timepieces embodies
+            the very best in Swiss craftsmanship and engineering, ensuring that
+            you'll always have a reliable and stylish accessory on your wrist.
+          </p>
+          <p class="about-us-text">
+            At our premium watch collection, we believe that a watch is more
+            than just a timekeeping device - it's a statement piece that
+            reflects your personality and style. So why settle for anything less
+            than the best?
+          </p>
+        </div>
+        <button type="button" class="about-us-btn">
+          <a class="about-us-btn-link" href="./#catalog">View catalog</a>
+        </button>
+      </div>
+      <picture>
+        <source
+          srcset="
+            ../img/aboutus-img-desk-1x.jpg,
+            ../img/aboutus-img-desk-2x.jpg 2x
+          "
+          media="1280px" />
+        <source
+          srcset="
+            ../img/aboutus-img-tab-1x.jpg 1x,
+            ../img/aboutus-img-tab-2x.jpg 2x
+          "
+          media="768px" />
+        <source
+          srcset="
+            ../img/aboutus-img-mob-1x.jpg 1x,
+            ../img/aboutus-img-mob-2x.jpg 2x
+          "
+          media="375px" />
+        <img
+          src="../img/aboutus-img-tab-1x.jpg"
+          alt="about-us-img"
+          width="704"
+          height="512"
+      /></picture>
+    </div>
+  </div>
 </section>
