--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -27,19 +27,19 @@
             ../img/aboutus-img-desk-1x.jpg,
             ../img/aboutus-img-desk-2x.jpg 2x
           "
-          media="(min-width=1280px)" />
+          media="(min-width:1280px)" />
         <source
           srcset="
             ../img/aboutus-img-tab-1x.jpg 1x,
             ../img/aboutus-img-tab-2x.jpg 2x
           "
-          media="(min-width=768px)" />
+          media="(min-width:768px)" />
         <source
           srcset="
             ../img/aboutus-img-mob-1x.jpg 1x,
             ../img/aboutus-img-mob-2x.jpg 2x
           "
-          media="(min-width=375px)" />
+          media="(min-width:375px)" />
         <img
           src="../img/aboutus-img-tab-1x.jpg"
           alt="about-us-img"
