--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,6 +1,8 @@
 body {
     font-family: 'Gilroy', sans-serif;
     background-color: #ffffff;
+    max-width: 100%;
+    min-width: 320px;
 }
 
 h1,
@@ -16,8 +18,23 @@ p {
     color: rgba(12, 12, 12, 0.7);
 }
 
-.container {
-    width: 320px;
-    padding: 0 16px;
-    margin: 0 auto;
+
+@media screen and (min-width: 375px) {
+    .container {
+        min-width: 375px;
+        padding: 0 16px;
+        margin: 0 auto;
+}
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        min-width: 768px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .container {
+            min-width: 1280px;
+        }
 }
