--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -3,7 +3,7 @@
     <h2 class="reviews-title">Reviews</h2>
     <ul class="reviews-container">
       <li class="review review-1">
-        <img class="review-photo" src="./images/Ellipse1.jpg" alt="" />
+        <img class="review-photo" src="/img/Ellipse1.jpg" alt="" />
         <h3 class="review-title-name">John Wax</h3>
         <p class="review-title-text">
           Buying a watch from WatchCharm was the best choice for me. The design
@@ -12,7 +12,7 @@
         </p>
       </li>
       <li class="review review-2">
-        <img class="review-photo" src="./images/Ellipse2.jpg" alt="" />
+        <img class="review-photo" src="/img/Ellipse2.jpg" alt="" />
         <h3 class="review-title-name">Victoria Romasherko</h3>
         <p class="review-title-text">
           Can’t take my eyes off my watch from WatchCharm. Every time I put it
@@ -21,7 +21,7 @@
         </p>
       </li>
       <li class="review review-3">
-        <img class="review-photo" src="./images/Ellipse3.jpg" alt="" />
+        <img class="review-photo" src="/img/Ellipse3.jpg" alt="" />
         <h3 class="review-title-name">Anastasia Trochuk</h3>
         <p class="review-title-text">
           My watch from WatchCharm is a real masterpiece. Every detail impresses
