--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -13,7 +13,7 @@
     letter-spacing: -0.02em;
     margin-left: 0;
     margin-right: 0;
-    padding-left: 20px;
+    padding-left: 0;
 
 }
 
@@ -35,7 +35,7 @@
     background-color: #f9f9f9;
     border: 1px solid #ddd;
     border-radius: 10px;
-    padding: 32px 36px;
+    padding: 32px 34px;
     margin: 10px;
     text-align: center;
 }
@@ -45,6 +45,7 @@
     width: 56px;
     height: 56px;
     object-fit: cover;
+    margin: auto;
 }
 
 .review-title-name {
