--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,6 +1,6 @@
 @media screen and (min-width:320px) and (max-width:374px) {
     .container {
-        max-width: 374px;
+        max-width: 375px;
         margin: 0 auto;
         padding: 0 15px;
     }
@@ -8,8 +8,8 @@
 
 @media screen and (min-width:768px) {
     .container {
-        max-width: 768px;
-        margin: 0 auto;
+        max-width:768px;
+    
         padding: 0 15px;
     }
 }
@@ -17,17 +17,17 @@
     @media screen and (min-width:1280px) {
         .container {
             max-width: 1280px;
-            margin: 0 auto;
-            padding: 0 15px;
+
         }
     }
 
 
-
-@media screen and (min-width:320px) and (max-width:374px) {
-
-
-section {}
+body{
+    scroll-behavior: smooth;
+}
+section {
+background: #fbfbfb;
+}
 
 ul {
     list-style-type: none;
@@ -43,14 +43,15 @@ ul {
 
 
 .title-hero {
-font-family: "Gilroy", sans-serif;
+
     font-weight: 600;
-    font-size: 40px;
+    font-size: 35.6px;
     line-height: 95%;
     letter-spacing: -0.02em;
     color: #0c0c0c;
-    min-width: 335px;
+    max-width: 335px;
     margin-bottom: 20px;
+
 }
 
 .collection-color {
@@ -60,21 +61,26 @@ font-family: "Gilroy", sans-serif;
 .text-hero {
 font-family: "Gilroy", sans-serif;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 13.8px;
     line-height: 129%;
     letter-spacing: -0.02em;
     color: rgba(12, 12, 12, 0.7);
-    min-width: 335px;
-    margin-bottom: 28px;
+    max-width: 335px;
+    
+    margin-bottom: 100px;
 }
 
 
 .list-img-hero {
     display: flex;
-    margin-bottom: 28px;
+    /* margin-bottom: 28px; */
 }
 
-.item-img-hero {}
+.item-img-hero {
+border-radius: 100%;
+
+    
+}
 
 .link-hero_and_footer {
     position: absolute;
@@ -88,7 +94,127 @@ font-family: "Gilroy", sans-serif;
     color: #0c0c0c;
     top: 320px;
     right: 20px;
+
+
 }
 
-.backdrop-hero-img {}
+/* .current{
+    position: relative;
+} */
+
+/* .current::after{
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 4px;
+    content: '';
+    color:#0c0c0c;
+} */
+
+.link-hero_and_footer:hover{
+    color: #3350e9;
 }
+
+.backdrop-hero-img {
+
+}
+
+.watch-img{
+    border-radius: 10%;
+    width: 100%;
+}
+
+.victoria{
+    border-radius: 100%;
+    stroke-width: 2px;
+        stroke: #fbfbfb;
+        position: absolute;
+        left: 20px;
+        top: 294px;
+}
+.john{
+    border-radius: 100%;
+    stroke-width: 2px;
+        stroke: #fbfbfb;
+        position: absolute;
+        left: 52px;
+        top: 294px;
+}
+.anastasia{
+    border-radius: 100%;
+    stroke-width: 2px;
+        stroke: #fbfbfb;
+        position: absolute;
+        left: 84px;
+        top: 294px;
+}
+
+
+/* ------------------------------------------------------- */
+
+
+@media screen and (min-width:768px){
+    .container{
+        padding: 80px 32px;
+        width: 100%;
+    }
+        .title-hero{
+            max-width: 557px;
+            font-size: 70px;
+            line-height: 86%;
+        }
+        .text-hero{
+                    font-size: 16px;
+                    line-height: 125%;
+                    margin-bottom: 40px;
+                    max-width: 480px;
+                }
+        .link-hero_and_footer{
+            top: 320px;
+            right: 32px;
+            font-size: 20px;
+            line-height: 100%;
+
+        }
+                .victoria{
+                    top: 80px;
+                    left: 600px;
+                }
+                .john{
+                    top: 80px;
+                    left: 641px;
+                }
+                .anastasia{
+                    top: 80px;
+                    left: 680px;
+                }
+                .watch-img{
+                    border-radius: 5%;
+                }
+}
+
+/* ------------------------------------------------ */
+
+        @media screen and (min-width:1280px) {
+            .container {
+                width: 100%;
+                padding: 80px 65px;}
+            .title-hero{
+                max-width: 597px;
+                font-size: 72px;
+                line-height: 87%;
+            }
+            .link-hero_and_footer{
+                top: 329px;
+                right: 65px;
+            }
+                        .victoria{
+                            left:1069px ;
+                        }
+                        .john{
+                            left: 1113px;
+                        }
+                        .anastasia{
+                            left: 1155px;
+                        }
+        }
