--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -33,7 +33,11 @@
             "
             media="(max-width:767px)"
           />
-          <img src="/img/hero-img-left-desk-1x.jpg" alt="Victoria Romashenko" />
+          <img
+            class="victoria"
+            src="/img/hero-img-left-desk-1x.jpg"
+            alt="Victoria Romashenko"
+          />
         </picture>
       </li>
       <li class="item-img-hero">
@@ -57,7 +61,10 @@
             "
             media="(max-width:767px)" />
 
-          <img src="/img/hero-img-midle-desk-1x.jpg" alt="John Wax"
+          <img
+            class="john"
+            src="/img/hero-img-midle-desk-1x.jpg"
+            alt="John Wax"
         /></picture>
       </li>
       <li class="item-img-hero">
@@ -80,12 +87,16 @@
               /img/hero-img-right-mob-2x.jpg 2x
             "
             media="(max-width:767px)" />
-          <img src="/img/hero-img-right-desk-1x.jpg" alt="Anastasia Trachuk"
+          <img
+            class="anastasia"
+            src="/img/hero-img-right-desk-1x.jpg"
+            alt="Anastasia Trachuk"
         /></picture>
       </li>
     </ul>
 
-    <a class="link-hero_and_footer" href="#">Scroll down</a>
+    <a class="link-hero_and_footer current" href="#footer">Scroll down</a>
+
     <div class="backdrop-hero-img">
       <picture>
         <source
@@ -109,7 +120,11 @@
           "
           media="(max-width: 767px)"
         />
-        <img src="/img/hero-img-watch-desk-1x.jpg" alt="watch" />
+        <img
+          class="watch-img"
+          src="/img/hero-img-watch-desk-1x.jpg"
+          alt="watch"
+        />
       </picture>
     </div>
   </div>
