--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,28 +1,28 @@
 .reviews {
-    text-align: center;
+    /* text-align: center; */
     padding: 100px 65px;
-    background-color: #fff;
+    /* background-color: #fff; */
 }
 
 .reviews-title {
-    margin-bottom: 20px;
+    margin-bottom: 24px;
     text-align: left;
     font-weight: 600;
     font-size: 48px;
     line-height: 92%;
     letter-spacing: -0.02em;
-    margin-left: 0;
-    margin-right: 0;
+    /* margin-left: 0;
+    margin-right: 0; */
     padding-left: 0;
 
 }
 
-.reviews-section h2 {
+/* .reviews-section h2 {
     font-size: 2em;
     margin-bottom: 20px;
-}
+} */
 
-.reviews-container {
+.reviews-list {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -69,7 +69,7 @@
 
 /* ---------------------*/
 @media (min-width: 320px) and (max-width: 374px) {
-    .reviews-container {
+    .reviews-list {
         flex-direction: column;
         align-items: center;
     }
@@ -89,11 +89,13 @@
 
 
 @media (min-width: 375px) and (max-width: 767px) {
-    .reviews-container {
+    .reviews-list {
         flex-direction: column;
         align-items: center;
     }
-
+    .reviews{
+        padding: 60px 60px;
+    }
     .review {
         max-width: 70%;
     }
@@ -110,7 +112,7 @@
 /* --------------- */
 
 @media (min-width: 768px) and (max-width: 1279px) {
-    .reviews-container {
+    .reviews-list {
         flex-direction: row;
         align-items: center;
 
