--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,7 +1,7 @@
 <section class="reviews">
-  <div class="reviews-section">
+  <div class="reviews-section container">
     <h2 class="reviews-title">Reviews</h2>
-    <ul class="reviews-container">
+    <ul class="reviews-list">
       <li class="review review-1">
         <img class="review-photo" src="/img/Ellipse1.jpg" alt="" />
         <h3 class="review-title-name">John Wax</h3>
