--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,86 @@
 <header class="header">
-  Header
+  <div class="container header-container">
+    <nav class="header-nav">
+      <a class="logo" href="./index.html">watchcharm</a>
+      <ul class="header-list-nav">
+        <li><a class="link-header link-home-header" href="./index.html">Home</a></li>
+        <li><a class="link-header" href="">About Us</a></li>
+        <li><a class="link-header" href="">Catalog</a></li>
+        <li><a class="link-header" href="">Sale</a></li>
+        <li><a class="link-header" href="">Reviews</a></li>
+        <li><a class="link-header" href="">Contact Us</a></li>
+      </ul>
+    </nav>
+    <div class="header-socials">
+      <ul class="header-icon-socials">
+        <li class="header-item-icon">
+          <a href="https://www.facebook.com/goITclub/" target="_blank" class="social-link-header">
+            <svg width="21" height="20">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="header-item-icon">
+          <a href="https://www.instagram.com/goitclub/" target="_blank" class="social-link-header">
+            <svg width="21" height="20">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="header-item-icon">
+          <a href="https://www.youtube.com/c/GoIT" target="_blank" class="social-link-header">
+            <svg width="21" height="20">
+              <use href="./images/icons.svg#icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <button type="button" class=".open-menu-btn">
+      <svg width="34" height="16" class="icon-btn">
+            <use href="./img/icons.svg#icon-header-menu"></use>
+      </svg>
+    </button>
+  </div>
+  <div class="menu">
+    <button type="button" class="btn-close">
+      <svg width="24" height="24">
+          <use href="./img/icons.svg#icon-close-menu"></use>
+      </svg>
+    </button>
+    <nav class="menu-header-nav">
+      <ul class="menu-header-list-nav">
+        <li><a class="link-header link-home-header" href="./index.html">Home</a></li>
+        <li><a class="link-header" href="">About Us</a></li>
+        <li><a class="link-header" href="">Catalog</a></li>
+        <li><a class="link-header" href="">Sale</a></li>
+        <li><a class="link-header" href="">Reviews</a></li>
+        <li><a class="link-header" href="">Contact Us</a></li>
+      </ul>
+    </nav>
+    <div class="menu-header-socials">
+      <ul class="menu-header-icon-socials">
+        <li class="menu-header-item-icon">
+          <a href="https://www.facebook.com/goITclub/" target="_blank" class="menu-social-link-header">
+            <svg width="21" height="20">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="menu-header-item-icon">
+          <a href="https://www.instagram.com/goitclub/" target="_blank" class="menu-social-link-header ">
+            <svg width="21" height="20">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="menu-header-item-icon">
+          <a href="https://www.youtube.com/c/GoIT" target="_blank" class="menu-social-link-header">
+            <svg width="21" height="20">
+              <use href="./images/icons.svg#icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
 </header>
