--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -9,18 +9,12 @@
     }
 
 .catalog-container {
-    /* align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: column; */
     padding: 0px 20px;
-    width: 375px;
-    height: 1660px;
     }
 
 .catalog-title {
-    font-weight: 600;
     font-size: 32px;
-    line-height: 100%;
+    line-height: 1;
     letter-spacing: -0.02em;
     margin-bottom: 24px;
     }
@@ -44,13 +38,7 @@
     }
 
 .catalog-box-content {
-    /* display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: column;
-    gap: 10px; */
     padding: 24px 28px;
-    /* width: 279px; */
     }
     
 
@@ -60,10 +48,10 @@
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
-    /* gap: 8px;   */
     width: 279px;
     height: 44px;
-}
+    }
+
 .clock-title {
     font-weight: 500;
     font-size: 16px;
@@ -89,7 +77,7 @@
     margin: 0 auto;
     font-weight: 500;
     font-size: 14px;
-    line-height: 129%;
+    line-height: 1.29;
     text-align: center;
     color: #fbfbfb;
     border-radius: 16px;
@@ -97,7 +85,7 @@
     height: 48px;
     background-color: #3350e9;
     border: none;
-    /* padding: 20px 0; */
+    margin-top: 40px;
     }
 
 .catalog-btn-scroll:hover,
@@ -115,22 +103,13 @@
     }
 
 .catalog-container {
-    /* justify-content: flex-start; */
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding-left: 32px;
-    padding-right: 32px;
+    padding: 0 32px;
     width: 768px;
-    height: 1390px;
     }
 
 .catalog-title{
-    font-weight: 600;
     font-size: 48px;
     line-height: 92%;
-    letter-spacing: -0.02em;
-    color: #0c0c0c;
-    /* padding: 0  527px 40px 0; */
     margin-bottom: 40px;
     }
 
@@ -139,11 +118,8 @@
     }
 
 .catalog-link {
-    border: 1px solid rgba(12, 12, 12, 0.05);
-    border-radius: 30px;
     width: 344px;
     height: 414px;
-    background: #f3f3f3;
     }
 
 
@@ -152,14 +128,10 @@
     }
 
 .catalog-list {
-    display: flex;
     flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: flex-start;
     flex-direction: row;
     gap: 16px;
     row-gap: 32px;
-    width: 704px;
     }
 }
 
@@ -171,35 +143,19 @@
     }
 
 .catalog-container {
-  /* justify-content: flex-start; */
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding-right: 65px;
-  padding-left: 65px;
-  width: 1280px;
-  height: 944px;
+    padding: 0 65px;
+    width: 1280px;
     }
 
 .catalog-list {
-    /* display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: row; */
-  gap: 23px;
-  row-gap: 32px;
-  width: 1150px;
-  /* height: 860px; */
+    column-gap: 23px;
     }
 
+    .catalog-link {
+        width: calc((100% - 46px)/3);
+    }
 .catalog-title{
     margin-bottom: 40px;
-    }
-
-.catalog-link {
-    border: 1px solid rgba(12, 12, 12, 0.05);
-    border-radius: 30px;
-    background: #f3f3f3;
     }
 
 .catalog-link-not {
