--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,36 +16,36 @@
         <li class="header-item-icon">
           <a href="https://www.facebook.com/goITclub/" target="_blank" class="social-link-header">
             <svg width="21" height="20">
-              <use href="./images/icons.svg#icon-facebook"></use>
+              <use href="../img/icons_header.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li class="header-item-icon">
           <a href="https://www.instagram.com/goitclub/" target="_blank" class="social-link-header">
             <svg width="21" height="20">
-              <use href="./images/icons.svg#icon-instagram"></use>
+              <use href="../img/icons_header.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="header-item-icon">
           <a href="https://www.youtube.com/c/GoIT" target="_blank" class="social-link-header">
             <svg width="21" height="20">
-              <use href="./images/icons.svg#icon-youtube"></use>
+              <use href="../img/icons_header.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
       </ul>
     </div>
-    <button type="button" class=".open-menu-btn">
+    <button type="button" class="open-menu-btn">
       <svg width="34" height="16" class="icon-btn">
-            <use href="./img/icons.svg#icon-header-menu"></use>
+            <use href="../img/icons_header.svg#icon-menu-btn"></use>
       </svg>
     </button>
   </div>
-  <div class="menu">
+  <div class="menu-header">
     <button type="button" class="btn-close">
       <svg width="24" height="24">
-          <use href="./img/icons.svg#icon-close-menu"></use>
+          <use href="/img/icons_header.svg#icon-header-close"></use>
       </svg>
     </button>
     <nav class="menu-header-nav">
@@ -63,21 +63,21 @@
         <li class="menu-header-item-icon">
           <a href="https://www.facebook.com/goITclub/" target="_blank" class="menu-social-link-header">
             <svg width="21" height="20">
-              <use href="./images/icons.svg#icon-facebook"></use>
+              <use href="../img/icons_header.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li class="menu-header-item-icon">
           <a href="https://www.instagram.com/goitclub/" target="_blank" class="menu-social-link-header ">
             <svg width="21" height="20">
-              <use href="./images/icons.svg#icon-instagram"></use>
+              <use href="../img/icons_header.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="menu-header-item-icon">
           <a href="https://www.youtube.com/c/GoIT" target="_blank" class="menu-social-link-header">
             <svg width="21" height="20">
-              <use href="./images/icons.svg#icon-youtube"></use>
+              <use href="../img/icons_header.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
