--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,38 +1,3 @@
-a {
-    text-decoration: none;
-}
-
-ul,
-ol {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
-.container {
-    margin: 0;
-}
-@media screen and (min-width: 320px) and (max-width: 374px) {
-    .container {
-        min-width: 320px;
-    }
-}
-@media screen and (max-width: 768px) {
-    .container {
-        max-width: 768px;
-    }
-}
-
-@media screen and (max-width: 1280px) {
-    .container {
-        max-width: 1280px;
-    }
-}
 /*header*/
 
 .header-container {
@@ -85,6 +50,13 @@ img {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+}
+@media and (-webkit-min-device-pixel-ratio: 2),
+(min-resolution: 2dppx),
+(min-resolution 192dpi) {
+    .menu-header {
+    background-image: url(../img/header_mob1x.jpg);
+    }
 }
 
 .btn-close {
@@ -180,6 +152,13 @@ img {
         background-image: url(../img/header_tab1x.jpg),
         url(../img/header_tab2x.jpg);
     }
+    @media and (-webkit-min-device-pixel-ratio: 2),
+        (min-resolution: 2dppx),
+        (min-resolution 192dpi) {
+            .menu-header {
+                background-image: url(../img/header_tab2x.jpg);
+            }
+        }
 
     .icon-btn {
         width: 34px;
@@ -201,6 +180,7 @@ img {
         margin-bottom: 50px;
     }
 }
+
     @media screen and (min-width: 1280px) {
         .header-container {
             padding: 26px 64.5px;
