--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -37,8 +37,8 @@
       </ul>
     </div>
     <button type="button" class="open-menu-btn">
-      <svg width="34" height="16" class="icon-btn">
-            <use href="../img/icons_header.svg#icon-menu-btn"></use>
+      <svg width="28" height="14" class="icon-btn">
+            <use href="/img/icons_header.svg#icon-header-menu-open"></use>
       </svg>
     </button>
   </div>
@@ -82,5 +82,6 @@
           </a>
         </li>
       </ul>
+      </div>
     </div>
 </header>
