--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,4 +1,5 @@
 /*header*/
+/*mobili*/
 
 .header-container {
     max-width: 100%;
@@ -126,6 +127,8 @@
 
 .menu-social-link-header {
     fill: #fbfbfb;
+    width: 18px;
+    height: 18px;
 }
 
 .menu-social-link-header:hover,
@@ -136,6 +139,8 @@
 .is-open {
     display: inline-block;
 }
+
+/*tablet*/
 
 @media screen and (min-width: 768px) {
     .header-container {
@@ -179,7 +184,14 @@
     .menu-header-socials {
         margin-bottom: 50px;
     }
+    .menu-social-link-header {
+        fill: #fbfbfb;
+        width: 20px;
+        height: 20px;
+    }
 }
+
+/*desktop*/
 
     @media screen and (min-width: 1280px) {
         .header-container {
