add header file

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -42,6 +42,7 @@
       </svg>
     </button>
   </div>
+  <!--menu-->
   <div class="menu-header">
     <button type="button" class="btn-close">
       <svg width="24" height="24">
