--- a/src/partials/contact-us.html
+++ b/src/partials/contact-us.html
@@ -42,16 +42,39 @@
     </div>
   </div>
   <div class="div-img-contact-us">
-    <img
-      srcset="
-        /img/beforefooter-img-mob-1x.jpg 1x,
-        /img/beforefooter-img-mob-2x.jpg 2x
-      "
-      src="/img/beforefooter-img-mob-1x.jpg"
-      class="beforefooter-img"
-      alt="clock"
-      width="335"
-      height="512"
-    />
+    <picture>
+      <source
+        srcset="
+          /img/beforefooter-img-desk-1x.jpg 1x,
+          /img/beforefooter-img-desk-2x.jpg 2x
+        "
+        media="(min-width: 1158px)"
+      />
+      <source
+        srcset="
+          /img/beforefooter-img-tab-1x.jpg 1x,
+          /img/beforefooter-img-tab-2x.jpg 2x
+        "
+        media="(min-width: 768px)"
+      />
+      <source
+        srcset="
+          /img/beforefooter-img-mob-1x.jpg 1x,
+          /img/beforefooter-img-mob-2x.jpg 2x
+        "
+        media="(max-width: 767px)"
+      />
+      <img
+        srcset="
+          /img/beforefooter-img-mob-1x.jpg 1x,
+          /img/beforefooter-img-mob-2x.jpg 2x
+        "
+        src="/img/beforefooter-img-mob-1x.jpg"
+        class="beforefooter-img"
+        alt="clock"
+        width="335"
+        height="512"
+      />
+    </picture>
   </div>
 </section>
