--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,12 +1,20 @@
 /*header*/
 /*mobil*/
 
+.header {
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow:
+        0 1px 6px 0 rgba(46, 47, 66, 0.08),
+        0 1px 1px 0 rgba(46, 47, 66, 0.16),
+        0 2px 1px 0 rgba(46, 47, 66, 0.08);
+}
+
 .header-container {
-    max-width: 100%;
+    /* max-width: 100%; */
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-direction: row;
+    /* flex-direction: row; */
     padding: 20px;
 }
 
@@ -14,11 +22,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
+    /* flex-direction: row; */
 }
 
 .logo {
-    font-family: "Gilroy", sans-serif;
+    /* font-family: "Gilroy", sans-serif; */
     font-weight: 500;
     font-size: 16px;
     letter-spacing: -0.02em;
@@ -42,52 +50,75 @@
     top: 0;
     right: 20px;
     left: auto;
-    display: none;
     width: 200px;
     height: 100%;
     background: #0c0c0c;
-    background-image: url(../img/header_mob1x.jpg),
-    url(../img/header_mob2x.jpg);
+    background-image: url(../img/header_mob1x.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+
+    transition:
+        opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 0;
+    pointer-events: none;
+    z-index: 999;
 }
-@media and (-webkit-min-device-pixel-ratio: 2),
-(min-resolution: 2dppx),
-(min-resolution 192dpi) {
+
+.menu-header-wrap {
+    padding: 240px 39px 40px 39px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+screen and (min-resolution: 192dpi) and (max-width: 767px),
+screen and (min-resolution: 2dppx) and (max-width: 767px) {
     .menu-header {
-    background-image: url(../img/header_mob1x.jpg);
+    background-image: 
+        url(../img/header_mob2x.jpg);
     }
 }
 
 .btn-close {
-    display: block;
-    margin-left: auto;
-    margin-bottom: 186px;
+   
+    /* display: block; */
+    /* margin-left: auto; */
+    /* margin-bottom: 186px; */
     border: none;
     background-color: transparent;
     cursor: pointer;
-    margin-top: 20px;
-    margin-right: 20px;
+    /* margin-top: 20px;
+    margin-right: 20px; */
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 20px;
+    right: 20px;
 }
 
 .menu-header-list-nav {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
     flex-direction: column;
     gap: 24px;
-    margin-bottom: 260px;
+    /* margin-bottom: 260px; */
 }
 
 .link-header {
-    font-family: "Gilroy", sans-serif;
+    /* font-family: "Gilroy", sans-serif; */
     font-weight: 500;
     font-size: 14px;
     line-height: 1.3;
     color: #fbfbfb;
-    text-align: center;
-    align-items: center;
+    /* text-align: center;
+    align-items: center; */
 }
 
 .link-home-header {
@@ -106,14 +137,18 @@
 }
 
 .menu-header-socials {
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: flex-end;
 }
 
 .menu-header-icon-socials {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
+    /* align-items: center;
+    justify-content: center; */
+    /* flex-direction: row; */
     gap: 10px;
 }
 
@@ -129,6 +164,7 @@
     fill: #fbfbfb;
     width: 18px;
     height: 18px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-social-link-header:hover,
@@ -137,7 +173,8 @@
 }
 
 .is-open {
-    display: inline-block;
+    opacity: 1;
+    pointer-events: all;
 }
 
 /*tablet*/
@@ -154,16 +191,19 @@
     .menu-header {
         width: 330px;
         height: 100%;
-        background-image: url(../img/header_tab1x.jpg),
-        url(../img/header_tab2x.jpg);
+        background-image: url(../img/header_tab1x.jpg);
     }
-    @media and (-webkit-min-device-pixel-ratio: 2),
-        (min-resolution: 2dppx),
-        (min-resolution 192dpi) {
+        @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+        screen and (min-resolution: 192dpi) and (min-width: 768px),
+        screen and (min-resolution: 2dppx) and (min-width: 768px) {
             .menu-header {
                 background-image: url(../img/header_tab2x.jpg);
             }
         }
+
+    .menu-header-wrap {
+        padding: 310px 101px 50px 101px;
+    }
 
     .icon-btn {
         width: 34px;
@@ -171,21 +211,21 @@
     }
 
     .btn-close {
-        margin-bottom: 244px;
+        /* margin-bottom: 244px;
         margin-top: 26px;
-        margin-right: 32px;
+        margin-right: 32px; */
     }
 
     .menu-header-list-nav {
         gap: 32px;
-        margin-bottom: 350px;
+        /* margin-bottom: 350px; */
     }
 
     .menu-header-socials {
-        margin-bottom: 50px;
+        /* margin-bottom: 50px; */
     }
     .menu-social-link-header {
-        fill: #fbfbfb;
+        /* fill: #fbfbfb; */
         width: 20px;
         height: 20px;
     }
@@ -211,12 +251,12 @@
 
         .header-list-nav {
             display: flex;
-            align-items: flex-start;
+            /* align-items: flex-start;
             justify-content: flex-start;
             flex-direction: row;
-            flex-wrap: nowrap;
+            flex-wrap: nowrap; */
             gap: 40px;
-            min-width: 505px;
+            /* min-width: 505px; */
         }
 
         .link-header {
@@ -225,10 +265,19 @@
 
         .header-icon-socials {
             display: flex;
-            align-items: flex-start;
+            /* align-items: flex-start;
             justify-content: flex-start;
-            flex-direction: row;
+            flex-direction: row; */
             gap: 10px;
+        }
+
+        .social-link-header {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         .social-link-header:hover,
@@ -239,7 +288,7 @@
         .header-item-icon {
             border: 1px solid rgba(12, 12, 12, 0.1);
             border-radius: 10px;
-            padding: 8px;
+            /* padding: 8px; */
             width: 36px;
             height: 36px;
             gap: 8px;
