--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -38,51 +38,53 @@
     </div>
     <button type="button" class="open-menu-btn">
       <svg width="28" height="14" class="icon-btn">
-            <use href="/img/icons_header.svg#icon-header-menu-open"></use>
+        <use href="/img/icons_header.svg#icon-header-menu-open"></use>
       </svg>
     </button>
   </div>
   <!--menu-->
   <div class="menu-header">
-    <button type="button" class="btn-close">
-      <svg width="24" height="24">
+    <div class="menu-header-wrap">
+      <button type="button" class="btn-close">
+        <svg width="24" height="24">
           <use href="/img/icons_header.svg#icon-header-close"></use>
-      </svg>
-    </button>
-    <nav class="menu-header-nav">
-      <ul class="menu-header-list-nav">
-        <li><a class="link-header link-home-header" href="./index.html">Home</a></li>
-        <li><a class="link-header" href="">About Us</a></li>
-        <li><a class="link-header" href="">Catalog</a></li>
-        <li><a class="link-header" href="">Sale</a></li>
-        <li><a class="link-header" href="">Reviews</a></li>
-        <li><a class="link-header" href="">Contact Us</a></li>
-      </ul>
-    </nav>
-    <div class="menu-header-socials">
-      <ul class="menu-header-icon-socials">
-        <li class="menu-header-item-icon">
-          <a href="https://www.facebook.com/goITclub/" target="_blank" class="menu-social-link-header">
-            <svg width="21" height="20">
-              <use href="../img/icons_header.svg#icon-facebook"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="menu-header-item-icon">
-          <a href="https://www.instagram.com/goitclub/" target="_blank" class="menu-social-link-header ">
-            <svg width="21" height="20">
-              <use href="../img/icons_header.svg#icon-instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="menu-header-item-icon">
-          <a href="https://www.youtube.com/c/GoIT" target="_blank" class="menu-social-link-header">
-            <svg width="21" height="20">
-              <use href="../img/icons_header.svg#icon-youtube"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
+        </svg>
+      </button>
+      <nav class="menu-header-nav">
+        <ul class="menu-header-list-nav">
+          <li><a class="link-header link-home-header" href="./index.html">Home</a></li>
+          <li><a class="link-header" href="">About Us</a></li>
+          <li><a class="link-header" href="">Catalog</a></li>
+          <li><a class="link-header" href="">Sale</a></li>
+          <li><a class="link-header" href="">Reviews</a></li>
+          <li><a class="link-header" href="">Contact Us</a></li>
+        </ul>
+      </nav>
+      <div class="menu-header-socials">
+        <ul class="menu-header-icon-socials">
+          <li class="menu-header-item-icon">
+            <a href="https://www.facebook.com/goITclub/" target="_blank" class="menu-social-link-header">
+              <svg width="21" height="20">
+                <use href="../img/icons_header.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-header-item-icon">
+            <a href="https://www.instagram.com/goitclub/" target="_blank" class="menu-social-link-header ">
+              <svg width="21" height="20">
+                <use href="../img/icons_header.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-header-item-icon">
+            <a href="https://www.youtube.com/c/GoIT" target="_blank" class="menu-social-link-header">
+              <svg width="21" height="20">
+                <use href="../img/icons_header.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
+  </div>
 </header>
