--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -1,16 +1,16 @@
-.container {
+/* .container {
   width: 375px;
   padding-left: 20px;
   padding-right: 20px;
   margin: 0 auto;
-}
+} */
 .about-us-cont {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 .about-us {
-  padding-top: 60px;
+  /* padding-top: 60px; */
   padding-bottom: 60px;
 }
 .text-back {
@@ -21,20 +21,24 @@
   padding-top: 40px;
   padding-right: 20px;
   padding-left: 20px;
+
+  padding-bottom: 40px;
 }
 .about-us-name {
   font-weight: 600;
   font-size: 32px;
   line-height: 1;
   letter-spacing: -0.02em;
-  color: #0c0c0c;
-  padding-bottom: 28px;
+  /* color: #0c0c0c; */
+
+  margin-bottom: 28px;
 }
 .about-us-text-type {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding-bottom: 40px;
+
+  margin-bottom: 40px;
 }
 .about-us-text {
   width: 295px;
@@ -42,39 +46,42 @@
   font-size: 14px;
   line-height: 1.28;
   letter-spacing: -0.02em;
-  color: rgba(12, 12, 12, 0.7);
+  /* color: rgba(12, 12, 12, 0.7); */
 }
 .about-us-btn {
   border-radius: 16px;
-  width: 160px;
-  height: 48px;
-  background: #3350e9;
+  /* height: 48px; */
+  background-color: #3350e9;
   border: transparent;
+
+  min-width: 160px;
+  padding: 15px 37px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .about-us-btn:hover,
 .about-us-btn:focus {
-  background: #1f3cd4;
+  background-color: #1f3cd4;
 }
 .about-us-btn-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.28;
-  text-align: center;
+  /* text-align: center; */
   color: #fbfbfb;
-  padding-bottom: 40px;
+  /* padding-bottom: 40px; */
 }
 @media screen and (min-width: 768px) {
-  .container {
+  /* .container {
     width: 768px;
     padding-left: 32px;
     padding-right: 32px;
-  }
+  } */
   .about-us-cont {
     gap: 40px;
   }
 
   .about-us {
-    padding-top: 80px;
+    /* padding-top: 80px; */
     padding-bottom: 80px;
   }
   .text-back {
@@ -84,6 +91,8 @@
     padding-left: 60px;
     padding-right: 60px;
     padding-top: 80px;
+
+    padding-bottom: 80px;
   }
   .about-us-name {
     font-weight: 600;
@@ -91,7 +100,8 @@
     line-height: 0.9;
     letter-spacing: -0.02em;
     color: #0c0c0c;
-    padding-bottom: 50px;
+
+    margin-bottom: 50px;
   }
   .about-us-text {
     width: 584px;
@@ -99,28 +109,28 @@
     font-size: 16px;
     line-height: 1.25;
     letter-spacing: -0.02em;
-    color: rgba(12, 12, 12, 0.7);
+    /* color: rgba(12, 12, 12, 0.7); */
   }
   .about-us-text-type {
-    padding-bottom: 60px;
+    margin-bottom: 60px;
   }
   .about-us-btn-link {
-    padding-bottom: 80px;
+    /* padding-bottom: 80px; */
   }
 }
 @media screen and (min-width: 1280px) {
-  .container {
+  /* .container {
     width: 1280px;
     padding-left: 65px;
     padding-right: 65px;
-  }
+  } */
   .about-us-cont {
     flex-direction: row;
-    gap: 40px;
+    /* gap: 40px; */
   }
 
   .about-us {
-    padding-top: 100px;
+    /* padding-top: 100px; */
     padding-bottom: 100px;
   }
   .text-back {
@@ -130,6 +140,8 @@
     padding-left: 60px;
     padding-right: 60px;
     padding-top: 80px;
+
+    padding-bottom: 80px;
   }
   .about-us-name {
     font-weight: 600;
@@ -137,7 +149,7 @@
     line-height: 0.9;
     letter-spacing: -0.02em;
     color: #0c0c0c;
-    padding-bottom: 50px;
+    margin-bottom: 50px;
   }
   .about-us-text {
     width: 460px;
@@ -148,9 +160,9 @@
     color: rgba(12, 12, 12, 0.7);
   }
   .about-us-text-type {
-    padding-bottom: 45px;
+    margin-bottom: 45px;
   }
   .about-us-btn-link {
-    padding-bottom: 80px;
+    /* padding-bottom: 80px; */
   }
 }
