--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,4 +1,3 @@
-
 <section class="about-us">
   <div class="container about-us-cont">
     <div class="text-back">
@@ -21,24 +20,10 @@
       </button>
     </div>
     <picture>
-      <source
-        media="(min-width:1280px )"
-        srcset="/img/aboutus-img-desk-1x.jpg, /img/aboutus-img-desk-2x.jpg 2x"
-      />
-      <source
-        media="(min-width:768px )"
-        srcset="/img/aboutus-img-tab-1x.jpg 1x, /img/aboutus-img-tab-2x.jpg 2x"
-      />
-      <source
-        media="(min-width:375px )"
-        srcset="/img/aboutus-img-mob-1x.jpg 1x, /img/aboutus-img-mob-2x.jpg 2x"
-      />
-      <img
-        src="/img/aboutus-img-tab-1x.jpg"
-        alt="about-us-img-tab"
-        width="704"
-        height="512"
-      />
+      <source media="(min-width:1280px )" srcset="/img/aboutus-img-desk-1x.jpg, /img/aboutus-img-desk-2x.jpg 2x" />
+      <source media="(min-width:768px )" srcset="/img/aboutus-img-tab-1x.jpg 1x, /img/aboutus-img-tab-2x.jpg 2x" />
+      <source media="(min-width:375px )" srcset="/img/aboutus-img-mob-1x.jpg 1x, /img/aboutus-img-mob-2x.jpg 2x" />
+      <img src="/img/aboutus-img-mob-1x.jpg" alt="about-us-img-tab" width="704" height="512" />
     </picture>
   </div>
 </section>
