--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -119,8 +119,6 @@
 
 .catalog-link {
     width: calc((100% - 16px)/2);
-    /* width: 344px;
-    height: 414px; */
     }
 
 
@@ -144,7 +142,7 @@
     }
 
 .catalog-container {
-    padding: 0 65px;
+    /* padding: 0 65px; */
     width: 1280px;
     }
 
