--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -31,11 +31,20 @@
             <div class="footer-phone">
                 <a class="footer-tel-link" href="tel:+380684439426">+380 (68) 443-94-26</a>
             </div>
+
             <!--text-->
             <div class="footer-text-section">
                 <p class="footer-text">Have the time of your life with our watches: where high-class craftsmanship meets
                     impeccable
                     design</p>
+            </div>
+            <div class="footer-text-section-desktop">
+                <p class="footer-text-desktop">Have the time of your life with our watches: where high-class craftsmanship meets
+                    impeccable
+                    design</p>
+            </div>
+            <div class="footer-phone-desktop">
+                <a class="footer-tel-link-desktop" href="tel:+380684439426">+380 (68) 443-94-26</a>
             </div>
         </div>
         <!--zweite-->
