--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -10,7 +10,7 @@
   gap: 20px;
 }
 .about-us {
-  /* padding-top: 60px; */
+  padding-top: 60px;
   padding-bottom: 60px;
 }
 .text-back {
@@ -81,7 +81,7 @@
   }
 
   .about-us {
-    /* padding-top: 80px; */
+    padding-top: 80px;
     padding-bottom: 80px;
   }
   .text-back {
@@ -130,7 +130,7 @@
   }
 
   .about-us {
-    /* padding-top: 100px; */
+    padding-top: 100px;
     padding-bottom: 100px;
   }
   .text-back {
