--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -2,26 +2,28 @@
 
 
 /* mob */
-@media screen and (min-width: 375px) {
-    .catalog {
+/* @media screen and (min-width: 375px) { */
+.catalog {
     padding-top: 60px;
     padding-bottom: 60px;
-    }
-    
+}
+
 
 .catalog-title {
     font-size: 32px;
     line-height: 1;
     letter-spacing: -0.02em;
     margin-bottom: 24px;
-    }
+}
 
 .catalog-list {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
     flex-direction: column;
     gap: 20px;
+
+    margin-bottom: 40px;
     }
 
 .catalog-link {
@@ -39,13 +41,15 @@
     }
 
 .clock-text {
-    margin-top: 10px;
+    /* margin-top: 10px; */
     display: flex;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
     flex-direction: column;
     gap: 8px;
     width: 279px;
     height: 44px;
+
+    padding-top: 10px;
     }
 
 .clock-title {
@@ -53,7 +57,7 @@
     font-size: 16px;
     line-height: 1.25;
     letter-spacing: -0.02em;
-    color: #0c0c0c;
+    /* color: #0c0c0c; */
     }
 
 .clock-price {
@@ -66,10 +70,10 @@
 
 
 .catalog-btn-scroll {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 40px auto 0;
+    display: block;
+    /* align-items: center;
+    justify-content: center; */
+    /* margin: 40px auto 0; */
     font-weight: 500;
     font-size: 14px;
     line-height: 1.29;
@@ -78,13 +82,16 @@
     border-radius: 16px;
     background-color: #3350e9;
     border: none;
+
+    margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 .catalog-btn-scroll:hover,
 .catalog-btn-scroll:focus {
     background-color: #1f3cd4;
     }
-}
+/* } */
 
 
   /* tablet */
@@ -94,9 +101,9 @@
     padding-bottom: 80px;
     }
 
-.catalog-container {
-    width: 768px;
-    }
+    /* .catalog-container {
+        width: 768px;
+        } */
 
 .catalog-title {
     font-size: 48px;
@@ -120,8 +127,8 @@
 .catalog-list {
     flex-wrap: wrap;
     flex-direction: row;
-    gap: 16px;
-    row-gap: 32px;
+    gap: 32px 16px;
+    margin-bottom: 0;
     }
 }
 
@@ -132,18 +139,18 @@
     padding-bottom: 100px;
     }
 
-.catalog-container {
+/* .catalog-container {
     width: 1280px;
-    }
+    } */
 
-    .catalog-link {
+.catalog-link {
         width: calc((100% - 46px)/3);
     }
-.catalog-title{
+/* .catalog-title{
     margin-bottom: 40px;
-    }
+    } */
 
-.catalog-link-not {
+/* .catalog-link-not {
     display: block;
-    }
+    } */
 }
