--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,3 @@
-
 <section class="hero">
   <div class="container hero-container">
     <div class="hero-big-box">
@@ -15,7 +14,22 @@
       </div>
       <div class="hero-second-box">
         <div class="hero-second-box-pictures">
-          <ul class="list-img-hero">
+          <picture>
+            <source srcset="
+                              /img/hero-img-desk-1x.png 1x,
+                              /img/hero-img-desk-2x.png 2x
+                            " media="(min-width:1158px)" />
+            <source srcset="
+                              /img/hero-img-tab-1x.png 1x,
+                              /img/hero-img-tab-2x.png 2x
+                            " media="(min-width:768px)" />
+            <source srcset="
+                              /img/hero-img-mob-1x.png 1x,
+                              /img/hero-img-mob-2x.png 2x
+                            " media="(max-width:767px)" />
+            <img class="" src="../img/hero-img-mob-1x.png" alt="Victoria Romashenko" />
+          </picture>
+          <!-- <ul class="list-img-hero">
             <li class="item-img-hero">
               <picture>
                 <source srcset="
@@ -68,7 +82,7 @@
                 <img class="anastasia" src="/img/hero-img-right-mob-1x.jpg" alt="Anastasia Trachuk" />
               </picture>
             </li>
-          </ul>
+          </ul> -->
         </div>
         <div class="hero-second-box-ancor">
           <a class="link-hero_and_footer" href="#">Scroll down</a>
