--- a/src/css/header.css
+++ b/src/css/header.css
@@ -48,7 +48,7 @@
 .menu-header {
     position: fixed;
     top: 0;
-    right: 20px;
+    right: 0;
     left: auto;
     width: 200px;
     height: 100%;
