--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -1,10 +1,13 @@
 <!-- Catalog --Section 3 -->
-<section class="catalog">
+<section class="catalog" id="catalog">
     <div class="container catalog-container">
+
         <h2 class="catalog-title">Catalog</h2>
+
         <ul class="catalog-list">
             <li class="catalog-link">
                 <div class="catalog-box-content">
+
                     <picture class="catalog-img">
                         <source srcset="./img/catalog-img-watch1-mob-1x.png 1x, ./img/catalog-img-watch1-mob-2x.png 2x"
                             media="(min-width: 375px)" />
@@ -16,15 +19,20 @@
                         <img src="./img/catalog-img-watch1-mob-1x.png" alt="Garmin Fenix 7X Pro Sapphire Solar"
                             width="304" height="312" />
                     </picture>
+
                     <div class="clock-text">
+
                         <h3 class="clock-title">Garmin Fenix 7X Pro Sapphire Solar </h3>
+
                         <p class="clock-price">€500</p>
+
                     </div>
                 </div>
 
             </li>
             <li class="catalog-link">
                 <div class="catalog-box-content">
+
                     <picture>
                         <source srcset="./img/catalog-img-watch2-mob-1x.png 1x, ./img/catalog-img-watch2-mob-2x.png 2x"
                             media="(min-width: 375px)" />
@@ -36,14 +44,19 @@
                         <img src="./img/catalog-img-watch2-mob-1x.png" alt="Garmin Marq Athlete" width="304"
                             height="312" />
                     </picture>
+
                     <div class="clock-text">
+
                         <h3 class="clock-title">Garmin Marq Athlete</h3>
+
                         <p class="clock-price">€450</p>
+
                     </div>
                 </div>
             </li>
             <li class="catalog-link">
                 <div class="catalog-box-content">
+
                     <picture>
                         <source srcset="./img/catalog-img-watch3-mob-1x.png 1x, ./img/catalog-img-watch3-mob-2x.png 2x"
                             media="(min-width: 375px)" />
@@ -55,15 +68,20 @@
                         <img src="./img/catalog-img-watch3-mob-1x.png" alt="Garmin Descent MK1" width="304"
                             height="312" />
                     </picture>
+
                     <div class="clock-text">
+
                         <h3 class="clock-title">Garmin Descent MK1</h3>
+
                         <p class="clock-price">€680</p>
+
                     </div>
                 </div>
             </li>
             <li class="catalog-link">
                 <div class="catalog-box-content">
                     <div class="img-clock">
+
                         <picture>
                             <source
                                 srcset="./img/catalog-img-watch4-mob-1x.png 1x, ./img/catalog-img-watch4-mob-2x.png 2x"
@@ -77,16 +95,21 @@
                             <img src="./img/catalog-img-watch4-mob-1x.png" alt="Garmin D2 Delta PX" width="304"
                                 height="312" />
                         </picture>
+
                     </div>
                     <div class="clock-text">
+
                         <h3 class="clock-title">Garmin D2 Delta PX</h3>
+
                         <p class="clock-price">€380</p>
+
                     </div>
                 </div>
             </li>
             <li class="catalog-link catalog-link-not">
                 <div class="catalog-box-content">
                     <div class="img-clock">
+
                         <picture>
                             <source srcset="" media="(min-width: 375px)" />
                             <source
@@ -98,15 +121,20 @@
                             <img src="./img/catalog-img-watch5-tab-1x.png" alt="Garmin Fenix 6 Pro Solar" width="304"
                                 height="312" />
                         </picture>
+
                     </div>
                     <div class="clock-text">
+
                         <h3 class="clock-title">Garmin Fenix 6 Pro Solar</h3>
+
                         <p class="clock-price">€400</p>
+
                     </div>
                 </div>
             </li>
             <li class="catalog-link catalog-link-not">
                 <div class="catalog-box-content">
+
                     <picture>
                         <source srcset="" media="(min-width: 375px)" />
                         <source srcset="./img/catalog-img-watch6-tab-1x.png 1x, ./img/catalog-img-watch6-tab-2x.png 2x"
@@ -116,13 +144,19 @@
                         <img src="./img/catalog-img-watch6-tab-1x.png" alt="Tube Watch S42 Date Steel With Black"
                             width="304" height="312" />
                     </picture>
+
                     <div class="clock-text">
+
                         <h3 class="clock-title">Tube Watch S42 Date Steel With Black</h3>
+
                         <p class="clock-price">€395</p>
+
                     </div>
                 </div>
             </li>
         </ul>
+
         <button class="catalog-btn-scroll" type="button">Show more</button>
+
     </div>
 </section>
