--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,38 +1,52 @@
-<section class="reviews">
+<section class="reviews" id="reviews">
   <div class="reviews-section container">
+
     <h2 class="reviews-title">Reviews</h2>
 
     <ul class="reviews-list">
       <li class="review review-1">
+
         <img class="review-photo" src="/img/reviews-img-1-1x.jpg"
           srcset="/img/reviews-img-1-1x.jpg 1x, /reviews-img-1-2x 2x" alt="John Wax" width="56" height="56" />
+
         <h3 class="review-title-name">John Wax</h3>
+
         <p class="review-title-text">
           Buying a watch from was the best choice for me. The design is perfectly combined with high quality materials.
           The strap
           fits nicely on the hand, and the mechanism works flawlessly.
         </p>
+
       </li>
+
       <li class="review review-2">
+
         <img class="review-photo" src="/img/reviews-img-2-1x.jpg"
           srcset="/img/reviews-img-2-1x.jpg 1x, /reviews-img-2-2x 2x" alt="Victoria Romasherko" width="56"
           height="56" />
+
         <h3 class="review-title-name">Victoria Romasherko</h3>
+
         <p class="review-title-text">
           Can't take my eyes off my watch from. Every time I put it on, it is admired by those around me. The build
           quality and
           attention to detail make it a real gem among my accessories.
         </p>
+
       </li>
       <li class="review review-3">
+
         <img class="review-photo" src="/img/reviews-img-3-1x.jpg"
           srcset="/img/reviews-img-3-1x.jpg 1x, /reviews-img-3-2x 2x" alt="Anastasia Trochuk" width="56" height="56" />
+
         <h3 class="review-title-name">Anastasia Trochuk</h3>
+
         <p class="review-title-text">
           My watch from is a real masterpiece. Every detail impresses with the high quality of execution. Special
           features like
           [specify features] make it an indispensable companion in my daily life.
         </p>
+
       </li>
     </ul>
   </div>
