--- a/src/css/advertisement.css
+++ b/src/css/advertisement.css
@@ -71,7 +71,15 @@ font-weight: 500;
     padding: 15px 43px;
     max-width: 160px;
     display: block;
-   
+    transition: 
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color  250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.advertisement-btn:hover,
+.advertisement-btn:focus {
+    background-color: #fbfbfb;
+    color: #0c0c0c;
 }
 
 @media screen and (min-width: 768px) {
