--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -1,11 +1,18 @@
 <section class="section-your-story">
   <div class="container">
     <div class="container-your-story your-story-backdrop">
+
       <h2 class="advertisement-title">
         Choose <span class="span-your-story">your story</span>, making every
         moment unique. Time is your style, and we reveal it.
       </h2>
-      <button class="advertisement-btn" type="button">Contact Us</button>
+
+      <button class="advertisement-btn" type="button">
+
+        <a class="advertisement-btn-link" href="#contact-us">Contact Us</a>
+
+      </button>
+
     </div>
   </div>
 </section>
