--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,25 +1,30 @@
 <header class="header">
   <div class="container header-container">
     <nav class="header-nav">
+
       <a class="logo" href="./index.html">watchcharm</a>
+
       <ul class="header-list-nav">
         <li><a class="link-header link-home-header" href="./index.html">Home</a></li>
-        <li><a class="link-header" href="">About Us</a></li>
-        <li><a class="link-header" href="">Catalog</a></li>
-        <li><a class="link-header" href="">Sale</a></li>
-        <li><a class="link-header" href="">Reviews</a></li>
-        <li><a class="link-header" href="">Contact Us</a></li>
+        <li><a class="link-header" href="#about-us">About Us</a></li>
+        <li><a class="link-header" href="#catalog">Catalog</a></li>
+        <li><a class="link-header" href="#sale">Sale</a></li>
+        <li><a class="link-header" href="#reviews">Reviews</a></li>
+        <li><a class="link-header" href="#contact Us">Contact Us</a></li>
       </ul>
+
     </nav>
     <div class="header-socials">
       <ul class="header-icon-socials">
         <li class="header-item-icon">
+
           <a href="https://www.facebook.com/goITclub/" target="_blank" class="social-link-header">
             <svg width="21" height="20">
               <use href="/img/icons_header.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
+
         <li class="header-item-icon">
           <a href="https://www.instagram.com/goitclub/" target="_blank" class="social-link-header">
             <svg width="21" height="20">
@@ -27,6 +32,7 @@
             </svg>
           </a>
         </li>
+
         <li class="header-item-icon">
           <a href="https://www.youtube.com/c/GoIT" target="_blank" class="social-link-header">
             <svg width="21" height="20">
@@ -34,6 +40,7 @@
             </svg>
           </a>
         </li>
+
       </ul>
     </div>
     <button type="button" class="open-menu-btn">
@@ -45,22 +52,26 @@
   <!--menu-->
   <div class="menu-header">
     <div class="menu-header-wrap">
+
       <button type="button" class="btn-close">
         <svg width="24" height="24">
           <use href="/img/icons_header.svg#icon-header-close"></use>
         </svg>
       </button>
+
       <nav class="menu-header-nav">
         <ul class="menu-header-list-nav">
           <li><a class="link-header link-home-header" href="./index.html">Home</a></li>
-          <li><a class="link-header" href="">About Us</a></li>
-          <li><a class="link-header" href="">Catalog</a></li>
-          <li><a class="link-header" href="">Sale</a></li>
-          <li><a class="link-header" href="">Reviews</a></li>
-          <li><a class="link-header" href="">Contact Us</a></li>
+          <li><a class="link-header" href="#about Us">About Us</a></li>
+          <li><a class="link-header" href="#catalog">Catalog</a></li>
+          <li><a class="link-header" href="#sale">Sale</a></li>
+          <li><a class="link-header" href="#reviews">Reviews</a></li>
+          <li><a class="link-header" href="#contact Us">Contact Us</a></li>
         </ul>
+
       </nav>
       <div class="menu-header-socials">
+
         <ul class="menu-header-icon-socials">
           <li class="menu-header-item-icon">
             <a href="https://www.facebook.com/goITclub/" target="_blank" class="menu-social-link-header">
@@ -69,6 +80,7 @@
               </svg>
             </a>
           </li>
+
           <li class="menu-header-item-icon">
             <a href="https://www.instagram.com/goitclub/" target="_blank" class="menu-social-link-header ">
               <svg width="21" height="20">
@@ -76,6 +88,7 @@
               </svg>
             </a>
           </li>
+
           <li class="menu-header-item-icon">
             <a href="https://www.youtube.com/c/GoIT" target="_blank" class="menu-social-link-header">
               <svg width="21" height="20">
@@ -83,6 +96,7 @@
               </svg>
             </a>
           </li>
+
         </ul>
       </div>
     </div>
