--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -48,11 +48,11 @@
             <div class="footer-section-menu">
                 <ul class="footer-list">
                     <li><a class="link-footer" href="./index.html">Home</a></li>
-                    <li><a class="link-footer" href="">About Us</a></li>
-                    <li><a class="link-footer" href="">Catalog</a></li>
-                    <li><a class="link-footer" href="">Sale</a></li>
-                    <li><a class="link-footer" href="">Reviews</a></li>
-                    <li><a class="link-footer" href="">Contact Us</a></li>
+                    <li><a class="link-footer" href="#about-us">About Us</a></li>
+                    <li><a class="link-footer" href="#catalog">Catalog</a></li>
+                    <li><a class="link-footer" href="#sale">Sale</a></li>
+                    <li><a class="link-footer" href="#reviews">Reviews</a></li>
+                    <li><a class="link-footer" href="#contact">Contact Us</a></li>
                 </ul>
                 <p class="footer-address">
                     1678 S. Pioneer Road Salt Lake City UT 84104
