--- a/src/css/contact-us.css
+++ b/src/css/contact-us.css
@@ -1,91 +1,130 @@
-.section-contact-us {
-  padding: 0px 20px;
-  height: 100%;
+.contact-us {
+  /* padding: 0px 20px;
+  height: 100%; */
+
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .title-contact-us {
   font-weight: 600;
   font-size: 32px;
-  line-height: 100%;
+  line-height: 1;
   letter-spacing: -0.02em;
-  color: #0c0c0c;
-  padding-bottom: 24px;
+  /* color: #0c0c0c; */
+  /* padding-bottom: 24px; */
+
+  margin-bottom: 24px;
+}
+
+.contact-us-wrap-content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .container-form-contact-us {
   border-radius: 30px;
   padding: 48px 28px;
-  width: 335px;
-  height: 512px;
+  /* width: 335px;
+  height: 512px; */
   background-color: #f3f3f3;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
+  /* display: flex;
+  flex-direction: column; */
+  /* margin-bottom: 20px; */
 }
 
 .p-contact-us {
   font-weight: 500;
   font-size: 14px;
-  line-height: 129%;
+  line-height: 1.29;
   letter-spacing: -0.02em;
-  padding-bottom: 28px;
+  /* padding-bottom: 28px; */
+
+  margin-bottom: 28px;
+}
+
+.form-contact-us {
+  display: flex;
+  flex-direction: column;
 }
 
 .beforefooter-img {
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 
 .div-input-contact-us {
   margin-bottom: 18px;
 }
 
+.contact-us-form-input {
+  border: 1px solid rgba(12, 12, 12, 0.15);
+  border-radius: 12px;
+  padding: 12px 0 12px 14px;
+  width: 100%;
+  height: 42px;
+  background-color: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 input::placeholder {
   color: #0c0c0c;
+}
+
+.contact-us-form-input:hover,
+.contact-us-form-input:focus {
+  border-color: #3350e9 !important;
 }
 
 .textarea-comment-contact-us::placeholder {
   color: #0c0c0c;
 }
 
-.input-name-contact-us {
+/* .input-name-contact-us {
   border: 1px solid rgba(12, 12, 12, 0.15);
   border-radius: 12px;
   padding: 12px 0 12px 14px;
   width: 279px;
   height: 42px;
   background-color: transparent;
-}
+} */
 
-.input-email-contact-us {
+/* .input-email-contact-us {
   border: 1px solid rgba(12, 12, 12, 0.15);
   border-radius: 12px;
   padding: 12px 0 12px 14px;
   width: 279px;
   height: 42px;
   background-color: transparent;
-}
+} */
 
-.input-tel-contact-us {
+/* .input-tel-contact-us {
   border: 1px solid rgba(12, 12, 12, 0.15);
   border-radius: 12px;
   padding: 12px 0 12px 14px;
   width: 279px;
   height: 42px;
   background-color: transparent;
+} */
+
+.contact-us-form-textarea {
+  margin-bottom: 28px;
 }
 
 .textarea-comment-contact-us {
-  margin-bottom: 28px;
+  /* margin-bottom: 28px; */
   border: 1px solid rgba(12, 12, 12, 0.15);
   border-radius: 12px;
-  padding: 12px 0 54px 14px;
-  width: 279px;
+  padding: 12px 14px;
+  width: 100%;
   height: 84px;
   resize: none;
   background-color: transparent;
+
+  overflow: hidden;
 }
 
-.input-name-contact-us:focus,
+/* .input-name-contact-us:focus,
 .input-name-contact-us:hover {
   border-color: #3350e9;
 }
@@ -98,7 +137,7 @@ input::placeholder {
 .input-email-contact-us:focus,
 .input-email-contact-us:hover {
   border-color: #3350e9;
-}
+} */
 
 .textarea-comment-contact-us:focus,
 .textarea-comment-contact-us:hover {
@@ -109,15 +148,17 @@ input::placeholder {
   display: block;
   border-radius: 16px;
   padding: 12px 50px;
-  min-width: 134px;
+  max-width: 134px;
   height: 42px;
   background-color: #3350e9;
   color: #fbfbfb;
   border: none;
   font-weight: 500;
   font-size: 14px;
-  line-height: 129%;
-  text-align: center;
+  line-height: 1.29;
+  /* text-align: center; */
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-send-contact-us:focus,
@@ -133,10 +174,21 @@ input:placeholder-shown {
 }
 
 @media screen and (min-width: 768px) {
+  .contact-us {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+
   .title-contact-us {
     font-size: 48px;
-    line-height: 100%;
-    padding-bottom: 40px;
+    line-height: 1;
+    /* padding-bottom: 40px; */
+
+    margin-bottom: 40px;
+  }
+
+  .contact-us-wrap-content {
+    gap: 40px;
   }
 
   .container-form-contact-us {
@@ -144,28 +196,28 @@ input:placeholder-shown {
     padding: 50px 122px;
     width: 704px;
     height: 556px;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
   }
 
-  .section-contact-us {
+  /* .section-contact-us {
     margin-left: 32px;
     margin-right: 32px;
     padding: 0px 20px;
-  }
+  } */
 
-  .form-contact-us {
+  /* .form-contact-us {
     width: 460px;
     height: 456px;
-  }
+  } */
 
   .p-contact-us {
-    padding-bottom: 32px;
+    /* padding-bottom: 32px; */
     font-size: 16px;
-    line-height: 125%;
+    line-height: 1.25;
   }
 
-  .input-name-contact-us {
+  /* .input-name-contact-us {
     padding-left: 16px;
     width: 460px;
     height: 52px;
@@ -181,50 +233,65 @@ input:placeholder-shown {
     padding-left: 16px;
     width: 460px;
     height: 52px;
+  } */
+
+  .contact-us-form-textarea {
+    margin-bottom: 32px;
   }
 
   .textarea-comment-contact-us {
-    padding-left: 16px;
-    width: 460px;
+    /* padding-left: 16px; */
+    /* width: 460px; */
     height: 90px;
-    margin-bottom: 32px;
+    /* margin-bottom: 32px; */
+
+    padding: 16px;
   }
 
   .button-send-contact-us {
     padding: 17px 63px;
-    width: 160px;
+    min-width: 160px;
     height: 52px;
   }
 
   .beforefooter-img {
-    margin-top: 40px;
+    /* margin-top: 40px;
     border-radius: 50px;
-    width: 704px;
+    width: 704px; */
   }
 }
 
 @media screen and (min-width: 1280px) {
-  .section-contact-us {
+  /* .section-contact-us {
     display: flex;
     gap: 40px;
+  } */
+
+  .contact-us {
+    padding-top: 100px;
+    padding-bottom: 100px;
   }
 
-  .section-contact-us {
+  .contact-us-wrap-content {
+    flex-direction: row;
+  }
+
+  /* .section-contact-us {
     width: calc((100% - 40px) / 1);
-  }
+  } */
 
-  .beforefooter-img {
+  /* .beforefooter-img {
     border-radius: 50px;
     width: 530px;
     height: 556px;
     margin-top: 84px;
-  }
+  } */
 
   .container-form-contact-us {
     padding: 50px 60px;
     width: 580px;
     height: 556px;
-    display: flex;
-    flex-direction: row;
+    /* display: flex;
+    flex-direction: row; */
   }
 }
